# ricklib

./: LICENSE  README.md  pyproject.toml
src/ricklib/: audio.py  glib.py  graphics2d.py  pngenerator.py  polynomial.py
tests/: graphic_test.py  graphtest.py
